[gd_scene load_steps=2 format=3 uid="uid://dvr4c1g4kdphr"]

[ext_resource type="Script" path="res://multiplayer_controller.gd" id="1_8xvwu"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 472.0
offset_top = 224.0
offset_right = 472.0
offset_bottom = 224.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8xvwu")

[node name="HostGame" type="Button" parent="."]
layout_mode = 0
offset_left = 296.0
offset_top = 80.0
offset_right = 432.0
offset_bottom = 157.0
theme_override_font_sizes/font_size = 50
text = "Host"

[node name="JoinGame" type="Button" parent="."]
layout_mode = 0
offset_left = 448.0
offset_top = 80.0
offset_right = 576.0
offset_bottom = 157.0
theme_override_font_sizes/font_size = 50
text = "Join"

[node name="StartGame" type="Button" parent="."]
layout_mode = 0
offset_left = 296.0
offset_top = 312.0
offset_right = 577.0
offset_bottom = 389.0
theme_override_font_sizes/font_size = 50
text = "Start Game"

[node name="Name" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 296.0
offset_top = 160.0
offset_right = 576.0
offset_bottom = 237.0
theme_override_font_sizes/font_size = 50
placeholder_text = "Your name"
alignment = 1

[node name="Address" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 296.0
offset_top = 232.0
offset_right = 576.0
offset_bottom = 309.0
theme_override_font_sizes/font_size = 50
text = "127.0.0.1"
placeholder_text = "IP Address"
alignment = 1

[connection signal="pressed" from="HostGame" to="." method="_on_host_game_pressed"]
[connection signal="pressed" from="JoinGame" to="." method="_on_join_game_pressed"]
[connection signal="pressed" from="StartGame" to="." method="_on_start_game_pressed"]
